--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,17 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 		<title><%= content_for?(:title) ? yield(:title) : "Snorby #{Snorby::VERSION}" %></title>
-		
+
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Snorby - All About Simplicity" />
     <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<% @severities ||= Severity.all %>
 
 		<script type="text/javascript">
@@ -61,17 +67,17 @@
 		</style>
 
   </head>
-  
+
 	<body>
-		
+
 		<%= render :partial => 'layouts/header.html.erb' %>
 
     <div id="wrapper">
-      <%= render :partial => 'layouts/content.html.erb' %>		
+      <%= render :partial => 'layouts/content.html.erb' %>
     </div>
 
 		<%= render :partial => 'layouts/footer.html.erb' %>
-		
+
 		<%- flash.each do |type, message| -%>
 
       <script type="text/javascript" charset="utf-8">
@@ -79,7 +85,7 @@
       </script>
 
     <%- end -%>
-		
+
     <%= yield(:footer) %>
 
     <%= render :partial => 'layouts/notify' %>
@@ -112,5 +118,5 @@
       <% end %>
     </script>
 
-  </body> 
-</html> 
+  </body>
+</html>
